--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="Base.AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
-    </style>
-
-    <style name="AppTheme" parent="Base.AppTheme">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <!--   your app branding color for the app bar -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -15,12 +12,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DetailTheme" parent="Base.DetailTheme" />
+
     <style name="Base.DetailTheme" parent="Theme.AppCompat.Light.NoActionBar">
-
-    </style>
-
-
-    <style name="DetailTheme" parent="Base.DetailTheme">
 
     </style>
 
