--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -3,7 +3,9 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_margin="8dp"
+              android:layout_marginLeft="8dp"
+              android:layout_marginRight="8dp"
+              android:layout_marginBottom="8dp"
               android:gravity="center"
               android:orientation="vertical">
 
@@ -12,8 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="100dp"
+        android:background="@android:color/darker_gray"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="4dp">
+        app:cardCornerRadius="5dp">
 
         <ImageView
             android:id="@+id/iv_video"
