--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="grid_columns">3</integer>
-
+    <integer name="grid_columns_portrait">3</integer>
+    <integer name="grid_columns_landscape">4</integer>
     <integer name="poster_title_max_lines">2</integer>
 </resources>
