--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -16,7 +16,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="382dp"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -26,7 +26,7 @@
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/layout_movie"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="381dp"
                 android:background="@color/colorPrimary"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
@@ -160,7 +160,6 @@
                 android:textColor="@android:color/black"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"/>
 
             <TextView
@@ -236,6 +235,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/rv_similar_movies"
                 android:nestedScrollingEnabled="false"
+                android:layout_marginBottom="8dp"
                 />
 
         </LinearLayout>
