--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,12 +10,19 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+
     </style>
 
-    <style name="DetailTheme" parent="Base.DetailTheme" />
+    <style name="DetailTheme" parent="Base.DetailTheme"/>
 
     <style name="Base.DetailTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
+    </style>
+
+    <style name="settingsTheme" parent="PreferenceThemeOverlay">
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Widget.CardContent" parent="android:Widget">
@@ -25,6 +32,15 @@
         <item name="android:paddingBottom">24dp</item>
         <item name="android:orientation">vertical</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
 
 </resources>
