--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -65,22 +65,17 @@
                     android:id="@+id/movie_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text="Beauty and Beast"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintEnd_toStartOf="@+id/favouriteButton"
                     app:layout_constraintStart_toEndOf="@+id/iv_poster"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
-                    app:layout_constraintVertical_bias="0.060000002"/>
+                    app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"/>
 
                 <TextView
                     android:id="@+id/movie_genre"
@@ -96,6 +91,7 @@
                     android:maxLines="2"
                     android:text="Genre"
                     android:textSize="12sp"
+                    android:textStyle="italic"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintLeft_toLeftOf="@+id/movie_title"
                     app:layout_constraintTop_toBottomOf="@+id/movie_title"
@@ -112,21 +108,53 @@
                     android:textSize="14sp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-
                     />
+
+                <ImageView
+                    android:id="@+id/iv_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
+                    app:layout_constraintTop_toBottomOf="@+id/movie_genre"
+                    app:srcCompat="@drawable/ic_star_rate_white_18dp"/>
 
                 <TextView
                     android:id="@+id/movie_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="0dp"
                     android:layout_marginStart="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="0dp"
                     android:text="Rating"
                     android:textStyle="bold"
-                    app:layout_constraintLeft_toLeftOf="@+id/movie_title"
-                    app:layout_constraintTop_toBottomOf="@+id/movie_genre"/>
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_rating"
+                    app:layout_constraintStart_toEndOf="@+id/iv_rating"/>
+
+                <ImageButton
+                    android:id="@+id/shareButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_share_white_24dp"/>
+
+                <ImageButton
+                    android:id="@+id/favouriteButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
+                    app:srcCompat="@drawable/ic_favorite_border_white_24dp"/>
 
             </android.support.constraint.ConstraintLayout>
 
