--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
             android:title="@string/settings"/>
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="About">
         <menu>
             <item
                 android:id="@+id/nav_share"
@@ -29,10 +29,10 @@
                 android:iconTint="@android:color/darker_gray"
                 android:title="Share"/>
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_send_black_24dp"
+                android:id="@+id/nav_rate"
+                android:icon="@drawable/ic_star_black_24dp"
                 android:iconTint="@android:color/darker_gray"
-                android:title="Send"/>
+                android:title="Rate"/>
         </menu>
     </item>
 
