--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -54,6 +54,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="215dp"
                     android:scaleType="centerCrop"
+                    android:background="@android:color/darker_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.022"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -115,6 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
+                    android:layout_marginLeft="6dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toEndOf="@+id/iv_poster"
                     app:layout_constraintTop_toBottomOf="@+id/movie_genre"
@@ -209,6 +211,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
+                android:visibility="gone"
                 android:textStyle="normal"/>
 
             <android.support.v7.widget.RecyclerView
@@ -236,6 +239,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:visibility="gone"
                 android:textStyle="normal"/>
 
             <android.support.v7.widget.RecyclerView
@@ -256,6 +260,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:visibility="gone"
                 android:textStyle="normal"/>
 
             <android.support.v7.widget.RecyclerView
