--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -40,6 +40,7 @@
                     android:layout_marginRight="0dp"
                     android:layout_marginTop="0dp"
                     android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -54,7 +55,6 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="215dp"
                     android:scaleType="centerCrop"
-                    android:background="@android:color/darker_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.022"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -139,7 +139,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_share_white_24dp"/>
