--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@android:color/darker_gray"
         >
 
         <ImageView
@@ -25,7 +26,6 @@
             android:id="@+id/show_card_poster"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:background="@android:color/darker_gray"
             />
 
         <TextView
@@ -37,6 +37,7 @@
             android:layout_marginTop="@dimen/card_title_margin"
             android:ellipsize="end"
             android:maxLines="@integer/poster_title_max_lines"
+            android:textColor="@android:color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
