--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:elevation="@dimen/card_view_elevation"
     android:focusable="true"
-    android:background="@android:color/darker_gray"
+    android:background="@color/darkGrayColor"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="@dimen/card_view_corner_radius">
 
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@android:color/darker_gray"
+        android:background="@color/darkGrayColor"
         >
 
         <ImageView
@@ -35,10 +35,11 @@
             android:layout_marginLeft="@dimen/card_title_margin"
             android:layout_marginRight="@dimen/card_title_margin"
             android:layout_marginTop="@dimen/card_title_margin"
+            android:layout_marginBottom="@dimen/card_title_margin"
             android:ellipsize="end"
             android:maxLines="@integer/poster_title_max_lines"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textStyle="normal" />
 
     </LinearLayout>
 
