--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -48,6 +48,7 @@
 
                 <ImageView
                     android:id="@+id/iv_poster"
+                    android:transitionName="poster"
                     android:layout_width="100dp"
                     android:layout_height="150dp"
                     android:layout_marginBottom="16dp"
