--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,8 @@
 
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
 
+        <item name="android:windowContentTransitions">true</item>
+
     </style>
 
     <style name="DetailTheme" parent="Base.DetailTheme"/>
