--- a/app/src/main/res/menu/sort.xml
+++ b/app/src/main/res/menu/sort.xml
@@ -16,6 +16,7 @@
         android:title="@string/action_search"
         app:showAsAction="ifRoom"
         android:orderInCategory="100"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         />
 
     <item
