--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
 
     <dimen name="card_title_height">40dp</dimen>
     <dimen name="card_title_margin">8dp</dimen>
+    <dimen name="card_title_margin_vertical">4dp</dimen>
 
     <dimen name="grid_recycler_view_margin">4dp</dimen>
     <dimen name="card_view_margin">4dp</dimen>
