--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/ic_filter_list_white_24dp"
         android:id="@+id/action_sort"
         android:title="@string/action_sort"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:orderInCategory="101"
         />
 
@@ -23,8 +23,8 @@
         android:icon="@drawable/ic_language_white_24dp"
         android:id="@+id/action_language"
         android:title="@string/action_language"
-        app:showAsAction="never"
-        android:orderInCategory="101"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="102"
         />
 
 </menu>
