--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,7 +10,7 @@
         android:orderInCategory="101"
         />
 
-   <!-- <item
+   <item
         android:icon="@drawable/ic_search_white_24dp"
         android:id="@+id/action_search"
         android:title="@string/action_search"
@@ -18,7 +18,6 @@
         android:orderInCategory="100"
         app:actionViewClass="android.support.v7.widget.SearchView"
         />
--->
     <item
         android:icon="@drawable/ic_language_white_24dp"
         android:id="@+id/action_language"
