--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -17,6 +17,7 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -71,7 +72,7 @@
                     android:layout_marginTop="8dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="Beauty and Beast"
+                    android:text="@string/not_available"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/favouriteButton"
@@ -90,7 +91,7 @@
                     android:layout_marginEnd="8dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="Genre"
+                    android:text="@string/not_available"
                     android:textSize="12sp"
                     android:textStyle="italic"
                     app:layout_constraintRight_toRightOf="parent"
@@ -105,7 +106,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Release Date"
+                    android:text="@string/not_available"
                     android:textSize="14sp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="0dp"
                     android:layout_marginLeft="0dp"
-                    android:text="Rating"
+                    android:text="@string/not_available"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_rating"
                     app:layout_constraintStart_toEndOf="@+id/iv_rating"/>
